@@ -8,3 +8,4 @@ add_subdirectory(nodeeditor)
 add_subdirectory(physfs-3.0.2)
 add_subdirectory(SortFilterProxyModel)
 add_subdirectory(syntax-highlighting)
+add_subdirectory(xmldom)
