@@ -463,7 +463,8 @@
         text and background coloring. It is allways possible to use HTML 3.2 tags in text.
         If you need more, you can surround the text with &lt;html&gt;...&lt;/html&gt; to
         use a subset of html HTML 4 tags in the text (see
-        https://doc.qt.io/qt-5/richtext-html-subset.html for the supported subset).<br>
+        https://doc.qt.io/qt-5/richtext-html-subset.html for the supported subset). This mode can also
+        execute code in an &lt;eval&gt;&lt;/eval&gt; block to display inlined variable text.<br>
         The second argument is optional and denotes the time that the text should be visible for.
         If the second value is &lt; 0 the wait time will be automatically determined based on the number of characters
         in the text.<br>
