@@ -128,6 +128,8 @@ New Features:
 - Changeable Layouts in Player implemented
 - New PlayerMediaPlayer features: seek, looping and startAt. Works with Sound and 
   Movie type resources.
+- showText can now execute code during the printing of text if it is encased in a 
+  <eval></eval> block in html mode.
 
 Changes:
 - JOIP-Engine uses PhysFS to allow restricted acces to files only, making it
